--- a/index.html
+++ b/index.html
@@ -33,5 +33,431 @@
         <a class="btn btn--white btn--animated" href="#">Discover our tours</a>
       </div>
     </header>
+
+    <!--<section class="grid-test">
+      <div class="row">
+        <div class="col-1-of-2">col 1 of 2</div>
+        <div class="col-1-of-2">col 1 of 2</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">col 1 of 3</div>
+        <div class="col-1-of-3">col 1 of 3</div>
+        <div class="col-1-of-3">col 1 of 3</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">col 1 of 3</div>
+        <div class="col-2-of-3">col 2 of 3</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-1-of-4">col 1 of 4</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-2-of-4">col 2 of 4</div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-3-of-4">col 3 of 4</div>
+      </div>
+    </section>-->
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-mrgn-btm--big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-mrgn-btm--small">
+              you're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Perferendis quis veritatis fugiat aut nulla atque aperiam nobis in
+              tenetur, magni ducimus obcaecati dolore soluta similique harum
+              consectetur.
+            </p>
+
+            <h3 class="heading-tertiary u-mrgn-btm--small">
+              Live adventures like you have never before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Perferendis quis veritatis fugiat aut nulla atque aperiamatque.
+            </p>
+
+            <a href="#" class="btn-text">Learn more &rArr;</a>
+          </div>
+
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+              /><img
+                src="img/nat-2-large.jpg"
+                alt="photo 2"
+                class="composition__photo composition__photo--p2"
+              /><img
+                src="img/nat-3-large.jpg"
+                alt="photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4 feature-card">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-mrgn-btm--small">
+                explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4 feature-card">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-mrgn-btm--small">meet nature</h3>
+              <p class="feature-box__text">
+                Culpa delectus temporibus non architecto! Et error repellendus
+                minima quas.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4 feature-card">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-mrgn-btm--small">find your way</h3>
+              <p class="feature-box__text">
+                Eum hic asperiores praesentium odio vitae totam in veniam neque?
+                Dolores, perspiciatis?
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4 feature-card">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-mrgn-btm--small">
+                live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Earum voluptates dignissimos error et laudantium veritatis!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-mrgn-btm--big">
+          <h2 class="heading-secondary">most wanted tours!</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__img card__img--1">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                    the sea explorer
+                  </span>
+                </h4>
+                <div class="card__desc">
+                  <ul>
+                    <li>3 days tour</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy yacht cabins</li>
+                    <li>Difficulty: Joyful</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__cta">
+                  <p class="card__price-box">
+                    only <br />
+                    <span class="card__price-value">&dollar;297</span>
+                  </p>
+                  <a href="#" class="btn btn--white">book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__img card__img--2">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2"
+                    >the forest hiker</span
+                  >
+                </h4>
+                <div class="card__desc">
+                  <ul>
+                    <li>7 days tour</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: Challenging</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                  <p class="card__price-box">
+                    only <br />
+                    <span class="card__price-value">&dollar;497</span>
+                  </p>
+                  <a href="#" class="btn btn--white">book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__img card__img--3">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3"
+                    >the snow boarder</span
+                  >
+                </h4>
+                <div class="card__desc">
+                  <ul>
+                    <li>5 days tour</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guide</li>
+                    <li>Sleep in provided suites</li>
+                    <li>Difficulty: Die-hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <p class="card__price-box">
+                    only <br />
+                    <span class="card__price-value">&dollar;897</span>
+                  </p>
+                  <a href="#" class="btn btn--white">book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-mrgn-btm--big u-mrgn-top--big">
+          <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="bg-vid">
+          <video class="bg-vid__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
+        </div>
+
+        <div class="u-center-text u-mrgn-btm--big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape story__shape--1">
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-mrgn-btm--small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Suscipit, quasi esse et quam provident ipsa eos animi soluta,
+                vel nesciunt ipsum neque! Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit. Et, labore commodi impedit fugiat
+                velit magni quo quos dicta perspiciatis repellat ullam modi.
+              </p>
+            </div>
+          </div>
+
+          <div class="story">
+            <figure class="story__shape story__shape--2">
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-mrgn-btm--small">
+                WOW! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
+                quas natus ipsa? Autem excepturi sed quaerat rerum non provident
+                debitis aut aliquid. Vel dolorem maxime beatae inventore esse
+                ullam eaque. Eligendi, at adipisci libero aut facilis velit
+                cumque ducimus ab aperiam?
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text">
+          <a href="#" class="btn-text">Read all stories &rArr;</a>
+        </div>
+      </section>
+
+      <section class="section-booking">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <div class="u-mrgn-btm--medium">
+                <h2 class="heading-secondary">start booking now</h2>
+              </div>
+
+              <form class="form" action="#" method="post">
+                <div class="form__group">
+                  <input
+                    type="text"
+                    name="name"
+                    id="full-name"
+                    class="form__input"
+                    placeholder="Full Name"
+                    required
+                  />
+                  <label for="full-name" class="form__label">Full Name</label>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="email"
+                    name="mail"
+                    id="email"
+                    class="form__input"
+                    placeholder="Email Address"
+                    required
+                  />
+                  <label for="email" class="form__label">Email Address</label>
+                </div>
+
+                <div class="form__group u-mrgn-btm--medium">
+                  <div class="form__radio-group">
+                    <input
+                      class="form__radio-input"
+                      type="radio"
+                      name="tour-size"
+                      id="small"
+                      checked
+                    />
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group
+                    </label>
+                  </div>
+
+                  <div class="form__radio-group">
+                    <input
+                      class="form__radio-input"
+                      type="radio"
+                      name="tour-size"
+                      id="large"
+                    />
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Large tour group
+                    </label>
+                  </div>
+                </div>
+
+                <div class="form__group">
+                  <button class="btn btn--green" type="submit">
+                    Next step &rarr;
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box u-mrgn-btm--big">
+        <img
+          class="footer__logo"
+          src="img/logo-green-2x.png"
+          alt="natours full logo"
+        />
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built by
+            <a
+              class="footer__link--copy"
+              href="http://netlify.noobdev.app"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Benyamin Sajedi Fard</a
+            >
+            for testing and practice case, under MIT license. Made possible with
+            CSS3 and Sass technologies.<br />Copyright &copy; by
+            <a
+              class="footer__link--copy"
+              href="http://netlify.noobdev.app"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Benyamin Sajedi Fard</a
+            >. You are 100% free to use this website and design for personal and
+            commercial purposes as you see fit.
+          </p>
+        </div>
+      </div>
+      <p class="footer__made u-mrgn-top--medium">
+        made with <span>❤️</span> in iran
+      </p>
+    </footer>
   </body>
 </html>
